# galaxy

./: .clang-format  .clang-tidy  .gitignore  .profile  CMakeLists.txt  README.md  conanfile.txt  main.cpp
.github/: copilot-instructions.md
config/: app_config.json
include/: Constant.h  Routes.h  Version.h
include/apiControllers/: CameraApiController.h  DevicesApiController.h  PassportApiController.h  PosternApiController.h  SystemApiController.h  UpgradeApiController.h
include/code/: ErrorCode.h  StringUtils.h
include/common/: Byteorder.h  LoggerWrapper.h  Packet.h  Serializer.h
include/config/: AppConfig.h
include/controllers/: DeviceManager.h  DevicesController.h  PassportController.h  PosternController.h  SystemController.h  UpgradeController.h  VersionController.h
include/devices/: Device.h  DeviceAgent.h  DeviceController.h  DeviceDiscoveryProcessor.h  DeviceImpl.h  DeviceManager.h  DeviceParams.h  DigisynControlMessage.h  DigisynController.h  DingLiController.h  JingRuiControlMessage.h  JingRuiController.h  KingrayControlMessage.h  KingrayController.h
include/middleware/: PassportMiddleware.h  ReqLoggerMiddleware.h
include/models/: AppInfo.h
include/services/upgrade/: FirmwareUpgradeService.h  ServiceUpgradeService.h  SystemUpgradeService.h
include/types/: App.h
include/utils/: FileUtils.h  JsonParamsParseHelper.h  LogUtils.h  PassportUtils.h  QueryParamsParseHelper.h  ResUtils.h  RsaUtils.h
jenkinsfile/: galaxy.groovy
libs/libaoip/: CMakeLists.txt
libs/libaoip/cmake/: libaoip-config.cmake.in
libs/libaoip/include/: AsyncProtocol.h  Logger.h  MemoryPool.h  Protocol.h  SerialProtocol.h  SpdlogAdapter.h  UdpSocket.h  async_protocol.h  ilogger.h  logger.h  memory_pool.h  protocol.h  spdlog_adapter.h  udp_socket.h
libs/libaoip/src/: AsyncProtocol.cpp  Protocol.cpp  SerialProtocol.cpp  UdpSocket.cpp  async_protocol.cpp  protocol.cpp  udp_socket.cpp
libs/mdns/: CMakeLists.txt
libs/mdns/cmake/: libmdns-config.cmake.in
libs/mdns/include/mdns/: MDNSService.h
libs/mdns/src/: MDNSService.cpp
rsa/2967430B-A04F-43C5-B0AE-429E3FD3AEB9/: private.pem  public.pem
src/: Routes.cpp
src/apiControllers/: CameraApiController.cpp  DevicesApiController.cpp  DevicesApiParamsParseHelper.h  PassportApiController.cpp  PosternApiController.cpp  SystemApiController.cpp  UpgradeApiController.cpp
src/config/: AppConfig.cpp
src/controllers/: DeviceManager.cpp  DevicesController.cpp  PassportController.cpp  PosternController.cpp  SystemController.cpp  UpgradeController.cpp  VersionController.cpp
src/devices/: Device.cpp  DeviceAgent.cpp  DeviceController.cpp  DeviceDiscoveryProcessor.cpp  DeviceImpl.cpp  DeviceManager.cpp  DigisynController.cpp  DingLiController.cpp  JingRuiController.cpp  KingrayControlMessage.cpp  KingrayController.cpp
src/services/upgrade/: FirmwareUpgradeService.cpp  ServiceUpgradeService.cpp  SystemUpgradeService.cpp
src/utils/: FileUtils.cpp  LogUtils.cpp  RsaUtils.cpp
